--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "lint": "eslint server src browser --ext js,jsx",
         "compile": "webpack --mode production",
         "watch-server-hmr": "webpack -w --config webpack.serverHMR.js",
-        "dev-all": "rm dist/* && yarn run watch-server-hmr & sleep 5 && yarn start"
+        "dev-all": "rm dist/* && yarn run watch-server-hmr & sleep 5 && yarn start",
+        "build": "npm run compile && ln -fs ../node_modules/bootstrap/distpublic/bootstrap"
     },
     "author": "EKaxada",
     "license": "MIT",
@@ -29,8 +30,12 @@
         "serialize-javascript": "^1.5.0",
         "source-map-support": "^0.5.9",
         "url-search-params": "^1.1.0",
+        "webpack": "^5.37.0",
+        "webpack-cli": "^4.7.0",
         "webpack-dev-middleware": "^3.4.0",
-        "webpack-hot-middleware": "^2.24.3"
+        "webpack-hot-middleware": "^2.24.3",
+        "webpack-merge": "^5.7.3",
+        "webpack-node-externals": "^3.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.0.0",
@@ -42,10 +47,6 @@
         "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
-        "eslint-plugin-react": "^7.11.1",
-        "webpack": "^4.23.1",
-        "webpack-cli": "^3.1.2",
-        "webpack-merge": "^4.1.5",
-        "webpack-node-externals": "^1.7.2"
+        "eslint-plugin-react": "^7.11.1"
     }
 }
